[package]
name = "threejs-sys"
version = "0.1.0"
description = ""
keywords = ["web", "graphics", "renderer"]
categories = ["rendering", "wasm"]
repository = "https://github.com/allsey87/threejs-sys"
documentation = "https://docs.rs/threejs-sys"
authors = ["Michael Allwright <allsey87@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]

[dependencies]
wasm-bindgen = "0.2.62"
web-sys = { version = "0.3.4", features = ['HtmlCanvasElement']}

